--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
     "sonner": "^1.7.0",
+    "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
